--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -8,9 +8,9 @@
     <uses-permission android:name="android.permission.RECEIVE_BOOT_COMPLETED" />
     <uses-permission android:name="android.permission.FOREGROUND_SERVICE" />
     <uses-permission android:name="android.permission.FOREGROUND_SERVICE_DATA_SYNC" />
-    <uses-permission android:name="android.permission.WAKE_LOCK" />
-    <uses-permission android:name="android.permission.DISABLE_KEYGUARD" />
     <uses-permission android:name="android.permission.POST_NOTIFICATIONS" />
+    <uses-permission android:name="android.permission.VIBRATE" />
+    <uses-permission android:name="android.permission.RECEIVE_USER_PRESENT" />
 
     <application
         android:allowBackup="true"
@@ -34,40 +34,23 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-
-        <!-- Camera Widget Provider -->
-        <receiver android:name=".widget.CameraWidgetProvider"
+        
+        <receiver
+            android:name=".widget.CameraWidgetProvider"
             android:exported="true">
             <intent-filter>
                 <action android:name="android.appwidget.action.APPWIDGET_UPDATE" />
-            </intent-filter>
-            <intent-filter>
-                <action android:name="hu.rezsekmv.cameracontroller.TOGGLE_MOTION" />
+                <action android:name="hu.rezsekmv.cameracontroller.WIDGET_CLICK" />
                 <action android:name="hu.rezsekmv.cameracontroller.REFRESH_WIDGET" />
-                <action android:name="android.intent.action.BOOT_COMPLETED" />
             </intent-filter>
-            <meta-data android:name="android.appwidget.provider"
+            <meta-data
+                android:name="android.appwidget.provider"
                 android:resource="@xml/camera_widget_info" />
         </receiver>
-
-        <!-- Camera Widget Service -->
-        <service android:name=".widget.CameraWidgetService"
+        
+        <service
+            android:name=".service.WidgetAutoRefreshService"
             android:exported="false"
             android:foregroundServiceType="dataSync" />
-
-        <!-- Connectivity Change Receiver -->
-        <receiver android:name=".widget.ConnectivityChangeReceiver"
-            android:exported="true"
-            android:enabled="true">
-            <intent-filter>
-                <action android:name="android.net.conn.CONNECTIVITY_CHANGE" />
-                <action android:name="android.net.wifi.STATE_CHANGE" />
-                <action android:name="android.net.wifi.WIFI_STATE_CHANGED" />
-            </intent-filter>
-        </receiver>
-
-
-
     </application>
-
 </manifest>
